--- a/index.html
+++ b/index.html
@@ -12,24 +12,89 @@
         <h1 class="titulo">Barcelona:El paraiso convertido en un infierno</h1>
     </header>
     <main>
-        <aside>
+        <aside class="menu">
             <h2>Menú</h2>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="#">Turismo</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="./pages/forms/index.html">Contacto</a></li>
                 </ul>
             </nav>
         </aside>
         <section>
-            <h2 class="titulo">Introducción</h2>
+            <h2 class="titulo">🌆 Descubre el Encanto de Barcelona 🌍
+            </h2>
+            <p>Barcelona, una ciudad vibrante y llena de historia, te invita a explorar sus rincones más auténticos. 🏛️ Desde sus icónicos monumentos hasta sus barrios con alma, aquí encontrarás un equilibrio perfecto entre cultura, gastronomía y paisajes inolvidables. 🍷🌊
 
+                ✨ Sumérgete en el legado de Gaudí con la majestuosa Sagrada Familia y el colorido Parque Güell 🎨, pasea por las calles adoquinadas del Barrio Gótico 🏰 o relájate bajo el sol en las playas de la Barceloneta 🏖️.
+                
+                🛍️ Descubre la esencia local en sus mercados, vive la magia de sus festivales 🎭 y déjate sorprender por la energía única que hace de Barcelona un destino inolvidable.
+                🌟 ¡Prepárate para vivir Barcelona como nunca antes! 🚀</p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <h2 class="subtitulo">Imágenes de Barcelona</h2>
+                <div class="galeria">
+                    <figure>
+                        <img src="./img/barcelona1.jpg" alt="Barcelona 1">
+                        <figcaption>Barcelona desde arriba.</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./img/barcelona2.jpeg" alt="Barcelona 2">
+                        <figcaption>Las vistas de la Barceloneta.</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./img/barcelona3.jpg" alt="Barcelona 3">
+                        <figcaption>El encanto de Arco de Triunfo.</figcaption>
+                    </figure>
+                </div>  
         </section>
-
+        <section>
+            <h2>Lugares de Interes</h2>
+            <br>
+            <div class="lugares">
+                <div class="lugar">
+                    <h3>Parque Güell</h3>
+                    <p>El Parque Güell es un parque natural conocido por sus grandes árboles y su energía natural. Su energía es la que hace de Barcelona un destino inolvidable.</p>
+                    <a href="https://parkguell.barcelona/es?q=es target="_blank">Visitar Parque Güell</a>
+                </div>
+                <br>
+                <div class="lugar">
+                    <h3>Sagrada Familia</h3>
+                    <p>La Sagrada Familia es un monumento histórico y religioso que se encuentra en el centro de Barcelona.</p>
+                    <a href="https://www.sagrada-familia.cat/es" target="_blank">Visitar Sagrada Familia</a>
+                </div>
+                <br>
+                <div class="lugar">
+                    <h3>Barrio Gótico</h3>
+                    <p>El Barrio Gótico es un barrio con alta densidad y historia. Este barrio es también conocido como el Barrio de Gracia.</p>
+                    <a href="https://www.barriogotico.cat/es" target="_blank">Visitar Barrio Gótico</a>
+                </div>
+                <br>
+            </div>
+        </section>
+        <section>
+            <h2>Festivales Febrero 2025</h2>
+            <br>
+            <div class="eventos">
+                <div class="evento">
+                    <h3>Fiestas de Santa Eulalia</h3>
+                    <p>El Festival de Santa Eulalia es un evento que celebra la vida y la belleza de Santa Eulalia en Barcelona. Este festival es muy popular entre los turistas y fomenta la cultura y la tradición local.</p>
+                    <a href="https://www.barcelona.cat/santaeulalia/es/programa" target="_blank">Visitar Fiestas de Santa Eulalia</a>
+                </div>
+                <br>
+                <div>
+                    <h3>Carnaval Barcelona</h3>
+                    <p>Carnaval es un evento que se celebra en Barcelona durante el mes de carnaval. Este festival es muy popular entre los turistas y fomenta la cultura y la tradición local.</p>
+                    <a href="https://irbarcelona.com/fiestas-y-tradiciones/carnaval-barcelona/" target="_blank">Visitar Carnaval Barcelona</a>
+                <br>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <p>&copy; 2025 Turismo Local. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
