He hecho un apartado de turismo y dentro he metido las diferetnes categorias de las que voy a hablar incluyendo un mapa y curiosidades sobre el barrio/sitio

--- a/pages/forms/index.html
+++ b/pages/forms/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="../../index.html">Home</a></li>
-                    <li><a href="#">Turismo</a></li>
+                    <li><a href="../turismo/index.html">Turismo</a></li>
                     <li><a href="./index.html">Contacto</a></li>
                 </ul>
             </nav>
